# mlops-community-demo

./: .gitignore  EDGAR.md  POSTGRES.md  Pulumi.yaml  README.md  __main__.py  build_layer.sh  pyproject.toml
src/company-ingest/: handler.py
src/company-proc/: handler.py
src/embeddings/: handler.py
src/error-handler/: handler.py
src/filings-ingest/: handler.py
src/filings-queue/: handler.py
src/final-report/: handler.py
src/sentiment/: handler.py
